Fire-Gem-WIN64-1.00/FFF_DARKCOMM.log
[Fire-Gem] Building...
fire_gem.c:6:1: error: unknown type name 'FG_INI'
    6 | FG_INI   g_ini;
      | ^~~~~~
fire_gem.c:7:1: error: unknown type name 'FG_MACRO'; did you mean 'FG_JSON_MACRO'?
    7 | FG_MACRO g_macro;
      | ^~~~~~~~
      | FG_JSON_MACRO
In file included from wndproc.c:4:
ini_loader.h:7:39: error: unknown type name 'FG_INI'
    7 | BOOL FG_ParseIni(const char *iniPath, FG_INI *out);
      |                                       ^~~~~~
In file included from wndproc.c:5:
json_loader.h:6:40: error: unknown type name 'FG_MACRO'; did you mean 'FG_JSON_MACRO'?
    6 | BOOL FG_LoadJson(const char *fullPath, FG_MACRO *out);
      |                                        ^~~~~~~~
      |                                        FG_JSON_MACRO
json_loader.h:7:31: error: unknown type name 'FG_MACRO'; did you mean 'FG_JSON_MACRO'?
    7 | BOOL FG_ExtractScriptFromJson(FG_MACRO *macro);
      |                               ^~~~~~~~
      |                               FG_JSON_MACRO
In file included from wndproc.c:6:
macro_builder.h:7:20: error: unknown type name 'FG_MACRO'; did you mean 'FG_JSON_MACRO'?
    7 | BOOL FG_BuildMacro(FG_MACRO *macro, const char *workingDir, HWND log);
      |                    ^~~~~~~~
      |                    FG_JSON_MACRO
In file included from wndproc.c:7:
macro_runner.h:6:38: error: unknown type name 'FG_MACRO'; did you mean 'FG_JSON_MACRO'?
    6 | void FG_RunBuiltMacro(HWND hEditLog, FG_MACRO *macro, const char *workingDir);
      |                                      ^~~~~~~~
      |                                      FG_JSON_MACRO
wndproc.c: In function 'CreateControls':
wndproc.c:15:22: error: 'IDC_BTN_LOAD_INI' undeclared (first use in this function)
   15 |         hwnd, (HMENU)IDC_BTN_LOAD_INI, hInst, NULL);
      |                      ^~~~~~~~~~~~~~~~
wndproc.c:15:22: note: each undeclared identifier is reported only once for each function it appears in
wndproc.c:20:22: error: 'IDC_CMB_JSON' undeclared (first use in this function)
   20 |         hwnd, (HMENU)IDC_CMB_JSON, hInst, NULL);
      |                      ^~~~~~~~~~~~
wndproc.c:24:22: error: 'IDC_BTN_LOAD_JSON' undeclared (first use in this function)
   24 |         hwnd, (HMENU)IDC_BTN_LOAD_JSON, hInst, NULL);
      |                      ^~~~~~~~~~~~~~~~~
wndproc.c:28:22: error: 'IDC_BTN_BUILD' undeclared (first use in this function)
   28 |         hwnd, (HMENU)IDC_BTN_BUILD, hInst, NULL);
      |                      ^~~~~~~~~~~~~
wndproc.c:32:22: error: 'IDC_BTN_RUN' undeclared (first use in this function)
   32 |         hwnd, (HMENU)IDC_BTN_RUN, hInst, NULL);
      |                      ^~~~~~~~~~~
wndproc.c:38:22: error: 'IDC_EDIT_LOG' undeclared (first use in this function)
   38 |         hwnd, (HMENU)IDC_EDIT_LOG, hInst, NULL);
      |                      ^~~~~~~~~~~~
wndproc.c:44:18: error: 'IDC_EDIT_TERM_INPUT' undeclared (first use in this function)
   44 |     hwnd, (HMENU)IDC_EDIT_TERM_INPUT, hInst, NULL
      |                  ^~~~~~~~~~~~~~~~~~~
wndproc.c:52:18: error: 'IDC_BTN_TERM_SEND' undeclared (first use in this function)
   52 |     hwnd, (HMENU)IDC_BTN_TERM_SEND, hInst, NULL
      |                  ^~~~~~~~~~~~~~~~~
wndproc.c: In function 'FireGem_WndProc':
wndproc.c:68:30: error: 'IDC_BTN_TERM_SEND' undeclared (first use in this function)
   68 |                         case IDC_BTN_TERM_SEND:
      |                              ^~~~~~~~~~~~~~~~~
wndproc.c:70:34: error: 'IDC_EDIT_TERM_INPUT' undeclared (first use in this function)
   70 |     HWND edit = GetDlgItem(hwnd, IDC_EDIT_TERM_INPUT);
      |                                  ^~~~~~~~~~~~~~~~~~~
wndproc.c:71:34: error: 'IDC_EDIT_LOG' undeclared (first use in this function)
   71 |     HWND log  = GetDlgItem(hwnd, IDC_EDIT_LOG);
      |                                  ^~~~~~~~~~~~
wndproc.c:83:30: error: 'g_ini' undeclared (first use in this function)
   83 |     FG_RunSingleCommand(log, g_ini.directory, cmd);
      |                              ^~~~~
wndproc.c:87:14: error: 'IDC_BTN_LOAD_INI' undeclared (first use in this function)
   87 |         case IDC_BTN_LOAD_INI:
      |              ^~~~~~~~~~~~~~~~
wndproc.c:91:17: error: implicit declaration of function 'FG_ParseIni' [-Wimplicit-function-declaration]
   91 |                 FG_ParseIni(iniPath, &g_ini);
      |                 ^~~~~~~~~~~
wndproc.c:92:54: error: 'IDC_CMB_JSON' undeclared (first use in this function)
   92 |                 FG_FillJsonDropdown(GetDlgItem(hwnd, IDC_CMB_JSON), g_ini.directory);
      |                                                      ^~~~~~~~~~~~
wndproc.c:97:14: error: 'IDC_BTN_LOAD_JSON' undeclared (first use in this function)
   97 |         case IDC_BTN_LOAD_JSON:
      |              ^~~~~~~~~~~~~~~~~
wndproc.c:109:13: error: implicit declaration of function 'FG_LoadJson' [-Wimplicit-function-declaration]
  109 |             FG_LoadJson(fullPath, &g_macro);
      |             ^~~~~~~~~~~
wndproc.c:109:36: error: 'g_macro' undeclared (first use in this function)
  109 |             FG_LoadJson(fullPath, &g_macro);
      |                                    ^~~~~~~
wndproc.c:113:14: error: 'IDC_BTN_BUILD' undeclared (first use in this function)
  113 |         case IDC_BTN_BUILD:
      |              ^~~~~~~~~~~~~
wndproc.c:116:13: error: implicit declaration of function 'FG_BuildMacro' [-Wimplicit-function-declaration]
  116 |             FG_BuildMacro(&g_macro, g_ini.directory, log);
      |             ^~~~~~~~~~~~~
wndproc.c:119:6: error: 'IDC_BTN_RUN' undeclared (first use in this function)
  119 | case IDC_BTN_RUN:
      |      ^~~~~~~~~~~
wndproc.c:125:5: error: implicit declaration of function 'FG_RunBuiltMacro' [-Wimplicit-function-declaration]
  125 |     FG_RunBuiltMacro(log, &g_macro, g_ini.directory);
      |     ^~~~~~~~~~~~~~~~
In file included from ini_loader.c:6:
ini_loader.h:7:39: error: unknown type name 'FG_INI'
    7 | BOOL FG_ParseIni(const char *iniPath, FG_INI *out);
      |                                       ^~~~~~
ini_loader.c:21:39: error: unknown type name 'FG_INI'
   21 | BOOL FG_ParseIni(const char *iniPath, FG_INI *out)
      |                                       ^~~~~~
In file included from json_loader.c:5:
json_loader.h:6:40: error: unknown type name 'FG_MACRO'; did you mean 'FG_JSON_MACRO'?
    6 | BOOL FG_LoadJson(const char *fullPath, FG_MACRO *out);
      |                                        ^~~~~~~~
      |                                        FG_JSON_MACRO
json_loader.h:7:31: error: unknown type name 'FG_MACRO'; did you mean 'FG_JSON_MACRO'?
    7 | BOOL FG_ExtractScriptFromJson(FG_MACRO *macro);
      |                               ^~~~~~~~
      |                               FG_JSON_MACRO
In file included from macro_builder.h:5,
                 from macro_builder.c:5:
json_loader.h:6:40: error: unknown type name 'FG_MACRO'; did you mean 'FG_JSON_MACRO'?
    6 | BOOL FG_LoadJson(const char *fullPath, FG_MACRO *out);
      |                                        ^~~~~~~~
      |                                        FG_JSON_MACRO
json_loader.h:7:31: error: unknown type name 'FG_MACRO'; did you mean 'FG_JSON_MACRO'?
    7 | BOOL FG_ExtractScriptFromJson(FG_MACRO *macro);
      |                               ^~~~~~~~
      |                               FG_JSON_MACRO
macro_builder.h:7:20: error: unknown type name 'FG_MACRO'; did you mean 'FG_JSON_MACRO'?
    7 | BOOL FG_BuildMacro(FG_MACRO *macro, const char *workingDir, HWND log);
      |                    ^~~~~~~~
      |                    FG_JSON_MACRO
macro_builder.c:15:20: error: unknown type name 'FG_MACRO'; did you mean 'FG_JSON_MACRO'?
   15 | BOOL FG_BuildMacro(FG_MACRO *macro, const char *workingDir, HWND log)
      |                    ^~~~~~~~
      |                    FG_JSON_MACRO
